# Midori

./: CMakeLists.txt  README.md
MidoriPrelude/: DateTime.mdr  IO.mdr  Math.mdr
misc/: mandelbrot.mdr
src/: Midori.cpp
src/Common/Error/: Error.cpp  Error.h
src/Common/Executable/: Executable.cpp  Executable.h
src/Common/Result/: Result.h
src/Common/Value/: Value.cpp  Value.h
src/Compiler/: Compiler.cpp  Compiler.h
src/Compiler/AbstractSyntaxTree/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  Type.cpp  Type.h
src/Compiler/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/Compiler/ImportManager/: ImportManager.cpp  ImportManager.h
src/Compiler/Lexer/: Lexer.cpp  Lexer.h
src/Compiler/Parser/: Parser.cpp  Parser.h
src/Compiler/Result/: Result.h
src/Compiler/Token/: Token.cpp  Token.h
src/Compiler/TypeChecker/: TypeChecker.cpp  TypeChecker.h
src/Interpreter/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h
src/Interpreter/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h
src/Utility/AbstractSyntaxTreePrinter/: AbstractSyntaxTreePrinter.cpp  AbstractSyntaxTreePrinter.h
src/Utility/Disassembler/: Disassembler.cpp
test/: run_test.py  test.mdr
test/closure/: closure_inside_conditional.mdr  dynamic_creation_capture_ref.mdr  dynamic_creation_capture_value.mdr  man_or_boy.mdr  multiple_nested.mdr  multiple_variable.mdr  mutable.mdr  nested.mdr  nested_and_recursion.mdr  recursion.mdr  recursive_closure.mdr  side_effect.mdr  simple.mdr
test/import/: import_io.mdr
test/leetcode/: 338_counting_bits.mdr  371_sum_of_two_integers.mdr  50_pow(x, n).mdr
test/namespace/: simple.mdr  struct.mdr  union.mdr
test/performance/: all.mdr  fib35.mdr  generate_paren.mdr  prime100000.mdr  str_concat.mdr
test/sicp/: differentiation.mdr  exponential.mdr  higher_order_function.mdr  lexical_scoping.mdr  recursion_iteration.mdr  simple_data_abstraction.mdr
test/struct/: duck_typing.mdr  func_member.mdr  nested_struct.mdr
test/union/: nested_case.mdr  simple.mdr  use_unpacked_values.mdr  valid_switch.mdr  valid_switch_default.mdr
